Fixes filter display on iOS

--- a/sass/modules/_modules.scss
+++ b/sass/modules/_modules.scss
@@ -239,7 +239,6 @@
    bottom: 0;
    left: 0;
    right: 0;
-   z-index: -1;
    opacity: 0.8;
 }
 
